Source/WebCore/platform/KURLGooglePrivate.h
@@ -31,6 +31,7 @@
 #ifndef KURLGooglePrivate_h
 #define KURLGooglePrivate_h
 
+#include <wtf/OwnPtr.h>
 #include <wtf/text/CString.h>
 
 #include <googleurl/src/url_parse.h>
@@ -49,6 +50,8 @@ namespace WebCore {
         KURLGooglePrivate();
         KURLGooglePrivate(const url_parse::Parsed&, bool isValid);
         KURLGooglePrivate(WTF::HashTableDeletedValueType);
+        KURLGooglePrivate(const KURLGooglePrivate&);
+        KURLGooglePrivate& operator=(const KURLGooglePrivate&);
 
         // Initializes the object. This will call through the backend initializer
         // below.
@@ -94,7 +97,10 @@ namespace WebCore {
         bool m_protocolIsInHTTPFamily;
         url_parse::Parsed m_parsed; // Indexes into the UTF-8 version of the string.
 
+        KURL* innerURL() const { return m_innerURL.get(); }
+
     private:
+        void initInnerURL();
         void initProtocolIsInHTTPFamily();
 
         CString m_utf8;
@@ -107,6 +113,8 @@ namespace WebCore {
 
         mutable bool m_stringIsValid;
         mutable String m_string;
+
+        OwnPtr<KURL> m_innerURL;
     };
 
 } // namespace WebCore
