third_party/WebKit/Source/WebCore/fileapi/EntryBase.cpp
@@ -76,7 +76,7 @@ String EntryBase::toURL()
         result.append(DOMFileSystemBase::kExternalPathPrefix);
         break;
     }
-    result.append(m_fullPath);
+    result.append(encodeWithURLEscapeSequences(m_fullPath));
     return result.toString();
 }
 
